docs: 更新 README 文档，添加 data-application-service 和 data-application-gateway 服务说明
- 在核心服务部分添加两个新服务（服务 10 和 11）
- 添加数据应用与 API 管理功能特性部分
- 更新项目结构，添加两个服务目录
- 更新服务端点列表和 API 文档链接
- 更新 Go 工作区列表
- 更新数据流说明，添加 API 发布和执行步骤
- 添加服务特定文档链接

--- a/deploy/Makefile
+++ b/deploy/Makefile
@@ -3,7 +3,7 @@
 ################################################################################
 
 # 服务列表
-SERVICES = basic-search configuration-center data-catalog data-exploration-service auth-service data-subject data-view session task_center
+SERVICES = basic-search configuration-center data-catalog data-exploration-service auth-service data-subject data-view session task_center data-application-service data-application-gateway
 # 可以添加更多服务: SERVICES = basic-search service-a service-b
 
 # Docker 镜像仓库
