--- a/services/apps/basic-search/cmd/server/docs/swagger.yaml
+++ b/services/apps/basic-search/cmd/server/docs/swagger.yaml
@@ -1002,7 +1002,7 @@ definitions:
         description: 电子证照目录编码
         type: string
       department:
-        description: 管理部门:长沙市数据资源管理局
+        description: 管理部门:xx市数据资源管理局
         type: string
       expire:
         description: 有效期
