--- a/services/apps/configuration-center/helm/configuration-center/values.yaml
+++ b/services/apps/configuration-center/helm/configuration-center/values.yaml
@@ -65,7 +65,7 @@ depServices:
     host: mariadb-mariadb-master.resource
     port: 3330
     user: anyshare
-    password: eisoo.com123
+    password: password
     database: af_configuration
   mq:
     mqHost: kafka-external-31000.resource
@@ -75,7 +75,7 @@ depServices:
     mqLookupdPort: 4161
     auth:
       username: kafkaclient
-      password: eisoo.com123
+      password: password
       mechanism: "PLAIN"
     kafkaHost: kafka-external-31000.resource
     kafkaPort: 9098
@@ -87,9 +87,9 @@ depServices:
       masterGroupName: mymaster
       host: proton-redis-proton-redis.resource
       port: 6379
-      password: eisoo.com123
+      password: password
       sentinelHost: proton-redis-proton-redis-sentinel.resource
-      sentinelPassword: eisoo.com123
+      sentinelPassword: password
       sentinelPort: 26379
       sentinelUsername: root
       username: root
