--- a/services/apps/data-catalog/helm/data-catalog/values.yaml
+++ b/services/apps/data-catalog/helm/data-catalog/values.yaml
@@ -55,12 +55,12 @@ depServices:
     host: mariadb-mariadb-master.resource
     port: 3330
     user: anyshare
-    password: eisoo.com123
+    password: password
     database: af_data_catalog
     migrationPath: /usr/local/bin/af/infrastructure/repository/db/gen/migration
   redis:
     host: proton-redis-proton-redis.resource:6379
-    password: eisoo.com123
+    password: password
     database: 1
     minIdleConns: 8
   configuration-center:
@@ -91,7 +91,7 @@ depServices:
   mq:
     kafkaHost: kafka-external-31000.resource:9098
     kafkaUser: kafkaclient
-    kafkaPassword: eisoo.com123
+    kafkaPassword: password
     mqHost: proton-mq-nsq-nsqd.resource
     mqPort: 4150
     mqHttpHost: proton-mq-nsq-nsqd.resource
