--- a/services/apps/session/docker/Dockerfile
+++ b/services/apps/session/docker/Dockerfile
@@ -60,4 +60,4 @@ USER adp
 EXPOSE 8113
 
 # 指定启动命令
-ENTRYPOINT [ "./session-server", "--confPath", "config/config.yaml"]
+ENTRYPOINT [ "./session-server", "--confPath", "config/"]
