Update helm file

--- a/services/apps/data-application-service/helm/data-application-service/templates/configmap.yaml
+++ b/services/apps/data-application-service/helm/data-application-service/templates/configmap.yaml
@@ -14,23 +14,26 @@ data:
   DB_NAME: {{ .Values.depServices.rds.database | quote }}
   REDIS_HOST: "{{ .Values.depServices.redis.host }}"
   REDIS_PASSWORD: "{{ .Values.depServices.redis.password }}"
-  REDIS_MASTER_NAME: "{{ .Values.depServices.redis.master_name }}"
-  KAFKA_TYPE: "{{ .Values.depServices.mq.kafka.type }}"
-  KAFKA_HOST: "{{ .Values.depServices.mq.kafka.host }}"
-  KAFKA_PORT: "{{ .Values.depServices.mq.kafka.port }}"
-  KAFKA_LOOKUPD_HOST: "{{ .Values.depServices.mq.kafka.lookupdHost }}"
-  KAFKA_LOOKUPD_PORT: "{{ .Values.depServices.mq.kafka.lookupdPort }}"
-  KAFKA_USERNAME: "{{ .Values.depServices.mq.kafka.username }}"
-  KAFKA_PASSWORD: "{{ .Values.depServices.mq.kafka.password }}"
-  KAFKA_MECHANISM: "{{ .Values.depServices.mq.kafka.mechanism }}"
+  KAFKA_TYPE: "{{ .Values.depServices.mq.mqType }}"
+  KAFKA_HOST: "{{ .Values.depServices.mq.mqHost }}"
+  KAFKA_PORT: "{{ .Values.depServices.mq.mqPort }}"
+  KAFKA_LOOKUPD_HOST: "{{ .Values.depServices.mq.mqLookupdHost }}"
+  KAFKA_LOOKUPD_PORT: "{{ .Values.depServices.mq.mqLookupdPort }}"
+  KAFKA_USERNAME: "{{ .Values.depServices.mq.auth.username }}"
+  KAFKA_PASSWORD: "{{ .Values.depServices.mq.auth.password }}"
+  KAFKA_MECHANISM: "{{ .Values.depServices.mq.auth.mechanism }}"
+  KAFKA_VERSION: "{{ .Values.depServices.mq.deployTrait.version }}"
   NSQ_TYPE: "{{ .Values.depServices.mq.nsq.type }}"
   NSQ_HOST: "{{ .Values.depServices.mq.nsq.host }}"
   NSQ_PORT: "{{ .Values.depServices.mq.nsq.port }}"
+  NSQ_HTTP_HOST: "{{ .Values.depServices.mq.nsq.httpHost }}"
+  NSQ_HTTP_PORT: "{{ .Values.depServices.mq.nsq.httpPort }}"
   NSQ_LOOKUPD_HOST: "{{ .Values.depServices.mq.nsq.lookupdHost }}"
   NSQ_LOOKUPD_PORT: "{{ .Values.depServices.mq.nsq.lookupdPort }}"
   VIRTUAL_ENGINE: "{{ .Values.depServices.virtualizationEngine.protocol }}://{{ .Values.depServices.virtualizationEngine.host }}:{{ .Values.depServices.virtualizationEngine.port }}"
   DATA_CATALOG: "http://{{ .Values.depServices.dataCatalog.host }}:{{ .Values.depServices.dataCatalog.port }}"
   DATA_VIEW: "http://{{ .Values.depServices.dataView.host }}:{{ .Values.depServices.dataView.port }}"
+  DATA_SUBJECT: "http://{{ .Values.depServices.dataSubject.host }}:{{ .Values.depServices.dataSubject.port }}"
   METADATA_MANAGE: "http://{{ .Values.depServices.metaDataManageService.host}}:{{ .Values.depServices.metaDataManageService.port}}"
   CONFIGURATION_CENTER: "http://{{ .Values.depServices.configCenterService.host}}:{{ .Values.depServices.configCenterService.port}}"
   GLOSSARY_SERVICE: "http://{{ .Values.depServices.glossaryService.host}}:{{ .Values.depServices.glossaryService.port}}"
@@ -39,11 +42,14 @@ data:
   WORKFLOW_REST: "http://{{ .Values.depServices.workflowRest.host}}:{{ .Values.depServices.workflowRest.port}}"
   DATA_APPLICATION_SERVICE: "http://{{ .Values.depServices.dataApplicationService.host}}:{{ .Values.depServices.dataApplicationService.port}}"
   BASIC_SEARCH: "http://{{ .Values.depServices.basicSearch.host}}:{{ .Values.depServices.basicSearch.port}}"
+  AUTH_SERVICE: "http://{{ .Values.depServices.authService.host}}:{{ .Values.depServices.authService.port}}"
   OSS_APP: "{{.Values.depServices.oss.ossApp}}"
   OSS_HOST: "{{.Values.depServices.oss.ossHost}}"
   OSS_PROTOCOL: "{{.Values.depServices.oss.ossProtocol}}"
   OSS_IS_DEFAULT: "{{.Values.depServices.oss.ossIsDefault}}"
   OSS_BUCKET: "{{.Values.depServices.oss.ossBucket}}"
+  AUDIT_URL: "{{ .Values.service.telemetry.audit.endpoint }}"
+  AUDIT_ENABLED: "{{ .Values.service.telemetry.audit.enabled }}"
   TRACE_URL: "{{ .Values.service.telemetry.trace.endpoint}}"
   TRACE_ENABLED: "{{ .Values.service.telemetry.trace.enabled}}"
   LOG_LEVEL: "{{ .Values.service.telemetry.log.level}}"
@@ -51,4 +57,8 @@ data:
   LOG_ENABLED: "{{ .Values.service.telemetry.log.enabled}}"
   SERVER_NAME: "{{ .Values.service.name}}"
   SERVER_VERSION: "{{ .Values.service.version}}"
-  AUTH_SERVICE: "http://{{ .Values.depServices.authService.host}}:{{ .Values.depServices.authService.port}}"
+  WORKFLOW_MQ_TYPE: "{{ .Values.depServices.mq.mqType }}"
+  WORKFLOW_CHANNEL: "{{ .Values.depServices.workflowRest.channel }}"
+  CALLBACK_ADDRESS: {{ .Values.callback.address | quote }}
+  CALLBACK_ENABLED: {{ .Values.callback.enabled | quote }}
+  CALLBACK_PRE_PATH: {{ .Values.callback.pre_path | quote }}
