--- a/services/apps/data-application-service/helm/data-application-service/values.yaml
+++ b/services/apps/data-application-service/helm/data-application-service/values.yaml
@@ -3,16 +3,16 @@ namespace: anyshare
 
 labels:
   deployment:
-    name: data-application-gateway-deployment
+    name: data-application-service-deployment
   pod:
-    app: data-application-gateway-pod
+    app: data-application-service-pod
   service:
-    app: data-application-gateway-service
+    app: data-application-service-service
 
 
 image:
   registry: acr.xxx.cn
-  repository: af/data-application-gateway
+  repository: af/data-application-service
   tag: "1.0.0-alpha"
   pullPolicy: IfNotPresent
 
@@ -20,14 +20,14 @@ image:
 replicaCount: 1
 
 
-name: data-application-gateway-deployment
+name: data-application-service-deployment
 
 nodeSelector: []
 
 service:
-  name: data-application-gateway
+  name: data-application-service
   type: ClusterIP
-  port: 8157
+  port: 8156
   version: 1.0.0
   telemetry:
     log:
@@ -37,6 +37,12 @@ service:
     trace:
       enabled: true
       endpoint: http://feed-ingester-service:13031/api/feed_ingester/v1/jobs/job-a2491f67d02e482c/events
+    # 审计日志
+    audit:
+      # 是否启用
+      enabled: false
+      # 上报地址
+      endpoint: https://anyrobot.example.org/api/feed_ingester/v1/jobs/12d627fb523d7362/events
 
 doc:
   host: "127.0.0.1:8000"
@@ -56,23 +62,36 @@ depServices:
     password: xxx
     database: data_application_service
   redis:
-    host: proton-redis-proton-redis-sentinel.resource:26379
-    password: xxx
-    master_name: mymaster
+    connectInfo:
+      masterGroupName: mymaster
+      password: password
+      sentinelHost: proton-redis-proton-redis-sentinel.resource.svc.cluster.local.
+      sentinelPassword: password
+      sentinelPort: 26379
+      sentinelUsername: root
+      username: root
+    connectType: sentinel
+    deployTrait:
+      version: ""
+    sourceType: internal
   mq:
-    kafka:
-      type: kafka
-      host: kafka-headless.resource
-      port: 9097
-      lookupdHost: kafka-headless.resource
-      lookupdPort: 9097
-      username: kafkaclient
-      password: xxx
+    auth:
       mechanism: PLAIN
+      password: xxx
+      username: anyrobot
+    deployTrait:
+      version: ""
+    mqHost: kafka-headless.resource.svc.cluster.local.
+    mqLookupdHost: ""
+    mqLookupdPort: 0
+    mqPort: 9097
+    mqType: kafka
     nsq:
       type: nsq
       host: proton-mq-nsq-nsqd.resource
-      port: 4151
+      port: 4150
+      httpHost: proton-mq-nsq-nsqd.resource
+      httpPort: 4151
       lookupdHost: proton-mq-nsq-nsqlookupd.resource
       lookupdPort: 4161
   configCenterService:
@@ -91,8 +110,8 @@ depServices:
     port: 80
   virtualizationEngine:
     protocol: http
-    host: data-connection
-    port: 8098
+    host: vega-gateway
+    port: 8099
   dataCatalog:
     host: data-catalog
     port: 8153
@@ -103,14 +122,18 @@ depServices:
     host: glossary-service
     port: 8183
   workflowRest:
-    host: workflow-rest
+    host: flow-audit-config
     port: 9800
+    channel: data-application-service
   dataApplicationService:
     host: data-application-service
     port: 8156
   basicSearch:
     host: basic-search
     port: 8163
+  dataSubject:
+    host: data-subject
+    port: 8123
   authService:
     host: auth-service
     port: 8155
@@ -128,3 +151,23 @@ resources:
   limits:
     cpu: 500m
     memory: 1024Mi
+
+# 回调配置
+callback:
+  # 是否启用回调
+  enabled: false
+  # 通过这个地址调用回调接口，格式定义在
+  # https://github.com/grpc/grpc/blob/master/doc/naming.md
+  #
+  #
+  #  - 192.169.52.204
+  #  - 192.169.52.204:80
+  #  - work-order-callback-server.example
+  #  - work-order-callback-server.example:80
+  #  - dns:///192.169.52.204:80
+  #  - dns:///work-order-callback-server.example:80
+  #  - dns://10.96.0.10/work-order-callback-server.example.svc.cluster.local:80
+  #  - dns://10.96.0.10/192-169-52-204.example.pod.cluster.local:80
+  #  - unix:///tmp/callback.sock
+  address: localhost
+  pre_path: /data-application-gateway
