Update the chart configuration files for some services

--- a/services/apps/auth-service/helm/auth-service/templates/configmap.yaml
+++ b/services/apps/auth-service/helm/auth-service/templates/configmap.yaml
@@ -12,21 +12,21 @@ data:
   DB_USERNAME: {{ .Values.depServices.rds.user | quote }}
   DB_PASSWORD: {{ .Values.depServices.rds.password | quote }}
   DB_NAME: {{ .Values.depServices.rds.database | quote }}
-  REDIS_HOST: "{{ .Values.depServices.redis.host }}"
+  REDIS_HOST: "{{ .Values.depServices.redis.connectInfo.sentinelHost }}:{{ .Values.depServices.redis.connectInfo.sentinelPort }}"
   REDIS_PASSWORD: "{{ .Values.depServices.redis.connectInfo.password }}"
   REDIS_MASTER_NAME: "{{ .Values.depServices.redis.connectInfo.master_name }}"
-  KAFKA_TYPE: "{{ .Values.depServices.mq.kafka.type }}"
-  KAFKA_HOST: "{{ .Values.depServices.mq.kafka.host }}"
-  KAFKA_PORT: "{{ .Values.depServices.mq.kafka.port }}"
-  KAFKA_LOOKUPD_HOST: "{{ .Values.depServices.mq.kafka.lookupdHost }}"
-  KAFKA_LOOKUPD_PORT: "{{ .Values.depServices.mq.kafka.lookupdPort }}"
-  KAFKA_USERNAME: "{{ .Values.depServices.mq.kafka.username }}"
-  KAFKA_PASSWORD: "{{ .Values.depServices.mq.kafka.password }}"
-  KAFKA_MECHANISM: "{{ .Values.depServices.mq.kafka.mechanism }}"
-  KAFKA_VERSION: "{{ .Values.depServices.kafka.version }}"
-  KAFKA_URI: "{{.Values.depServices.kafka.uri }}"
-  KAFKA_CLIENT_ID: "{{ .Values.depServices.kafka.clientId }}"
-  KAFKA_GROUP_ID: "{{ .Values.depServices.kafka.groupId }}"
+  KAFKA_TYPE: "{{ .Values.depServices.mq.mqType }}"
+  KAFKA_HOST: "{{ .Values.depServices.mq.mqHost }}"
+  KAFKA_PORT: "{{ .Values.depServices.mq.mqPort }}"
+  KAFKA_LOOKUPD_HOST: "{{ .Values.depServices.mq.mqLookupdHost }}"
+  KAFKA_LOOKUPD_PORT: "{{ .Values.depServices.mq.mqLookupdPort }}"
+  KAFKA_USERNAME: "{{ .Values.depServices.mq.auth.username }}"
+  KAFKA_PASSWORD: "{{ .Values.depServices.mq.auth.password }}"
+  KAFKA_MECHANISM: "{{ .Values.depServices.mq.auth.mechanism }}"
+  KAFKA_VERSION: "{{ .Values.depServices.mq.version }}"
+  KAFKA_URI:  "{{ .Values.depServices.mq.mqHost }}:{{ .Values.depServices.mq.mqPort }}"
+  KAFKA_CLIENT_ID: "{{ .Values.depServices.mq.clientId }}"
+  KAFKA_GROUP_ID: "{{ .Values.depServices.mq.groupId }}"
   NSQ_TYPE: "{{ .Values.depServices.mq.nsq.type }}"
   NSQ_HOST: "{{ .Values.depServices.mq.nsq.host }}"
   NSQ_PORT: "{{ .Values.depServices.mq.nsq.port }}"
